CREATE TABLE Cabecalho(
	id INT PRIMARY KEY, 
	numero_consumidor INT NOT NULL,
	data_elaboracao INT NOT NULL,
	prazo_pagamento INT NOT NULL,
	intervalo_dias INT NOT NULL
) 