CREATE TABLE Contas_Da_Empresa (
	id INT PRIMARY KEY, 
	leitura_recente INT NOT NULL,
	taxa_aplicaveis FLOAT NOT NULl
) 