CREATE TABLE Linha_De_Detalhamento(
	id INT PRIMARY KEY, 
	nivel_consumo INT NOT NULL,
	valor FLOAT NOT NULL
) 