CREATE TABLE Medidor (
	id INT PRIMARY KEY, 
	endereco CHARACTER varying (200) NOT NULL,
	tamanho INT NOT NULL,
	modelo CHARACTER varying NOT NULL
) 