CREATE TABLE Taxa (
	id INT PRIMARY KEY, 
	limite_consumo INT NOT NULL,
	valor_variavel INT NOT NULL,
	valor_fixo INT NOT NULL	
) 